# LayoutIdentificationAlgorithm

./: .gitignore  CMakeLists.txt  Doxyfile.in  UnitTestModule.cmake
cmake/modules/: DoxygenModule.cmake  UnitTestModule.cmake
src/: CMakeLists.txt
src/Common/: CMakeLists.txt
src/Common/Impl/: CMakeLists.txt
src/Common/Impl/Base64/: Base64.cpp  CMakeLists.txt
src/Common/Impl/BitMatrix/: BitMatrix.cpp  CMakeLists.txt  Matrix.cpp
src/Common/Impl/ByteHandler/: ByteHandler.cpp  CMakeLists.txt
src/Common/Impl/Hash/: CMakeLists.txt
src/Common/Impl/Hash/Crc32/: CMakeLists.txt  Crc32.cpp
src/Common/Impl/LayoutBitmapGenerator/: CMakeLists.txt  LayoutBitmapGenerator.cpp
src/Common/Impl/LayoutBitmapZond/: CMakeLists.txt  LayoutBitmapZond.cpp
src/Common/Impl/LayoutConverter/: CMakeLists.txt  LayoutConverter.cpp
src/Common/Impl/LayoutFragment/: CMakeLists.txt  Fragment.cpp  LayoutFragment.cpp
src/Common/Impl/LayoutMatrix/: CMakeLists.txt  LayoutMatrix.cpp  LayoutMatrixHash.cpp
src/Common/Impl/LayoutProcessor/: CMakeLists.txt  LayoutBitmapGenerator.cpp  LayoutProcessor.cpp
src/Common/Impl/LayoutReader/: CMakeLists.txt  LayoutReader.cpp
src/Common/Impl/LayoutReader/ReaderImpl/: MskReader.cpp
src/Common/Impl/MskReader/: CMakeLists.txt  LayoutReader_MSK.cpp
src/Common/Impl/RunLengthEncoding/: CMakeLists.txt  RunLengthEncoding.cpp
src/Common/Impl/UnitTests/: CMakeLists.txt
src/Common/Impl/UnitTests/Base64Test/: Base64Test.cpp  CMakeLists.txt
src/Common/Impl/UnitTests/BitMatrixTest/: BitMatrixTest.cpp  CMakeLists.txt
src/Common/Impl/UnitTests/BitmapGeneratorTest/: BitmapGeneratorTest.cpp  CMakeLists.txt
src/Common/Impl/UnitTests/ByteHandlerTest/: ByteHandlerTest.cpp  CMakeLists.txt
src/Common/Impl/UnitTests/GeneratorTest/: CMakeLists.txt  GeneratorTest.cpp
src/Common/Impl/UnitTests/GeneratorTest/EtalonBitmatrixFiles/elements_1/: elements_1_-4.txt  elements_1_1.txt  elements_1_13.txt  elements_1_16.txt  elements_1_17.txt  elements_1_19.txt  elements_1_23.txt  elements_1_27.txt
src/Common/Impl/UnitTests/GeneratorTest/EtalonBitmatrixFiles/outMsk/: outEtalonMatrix_-5.txt  outEtalonMatrix_1.txt  outEtalonMatrix_23.txt
src/Common/Impl/UnitTests/GeneratorTest/TestFiles/: carryCell.MSK  elements_1.msk  out.msk
src/Common/Impl/UnitTests/LayoutPrinter/: CMakeLists.txt  LayoutPrinter.cpp
src/Common/Impl/UnitTests/LayoutReaderTest/: CMakeLists.txt  LayoutReaderTest.cpp
src/Common/Impl/Vector2D/: CMakeLists.txt  Template.cpp  Vector2D.cpp
src/Common/Include/: Base64.h  BitMatrix.h  ByteHandler.h  Crc32.h  LayoutBitmapGenerator.h  LayoutBitmapZond.h  LayoutConverter.h  LayoutData.hpp  LayoutFragment.h  LayoutMatrix.h  LayoutPrinter.h  LayoutProcessor.h  Layout_comparator.h  Matrix.h  MskReader.hpp  RunLengthEncoding.h  TestModule.h  Vector2D.h
