set(TARGET_NAME RLE)
set(MATRIX_IMPLEMENTED_TARGET_NAME ${TARGET_NAME}_MATRIX_INCLUDED)

add_library(${TARGET_NAME} STATIC RunLengthEncoding.cpp)
add_library(${MATRIX_IMPLEMENTED_TARGET_NAME} STATIC RunLengthEncoding.cpp)

target_compile_definitions(${MATRIX_IMPLEMENTED_TARGET_NAME} PUBLIC -DMATRIX_IMPLEMENTED)

target_include_directories(${TARGET_NAME}  PUBLIC ${SHARED_INCLUDE_DIRS})
target_include_directories(${MATRIX_IMPLEMENTED_TARGET_NAME}  PUBLIC ${SHARED_INCLUDE_DIRS})